--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/anatomy": "^2.2.0",
     "@chakra-ui/next-js": "^2.1.4",
     "@chakra-ui/react": "^2.8.0",
+    "@chakra-ui/styled-system": "^2.9.1",
+    "@clerk/nextjs": "^4.23.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.12.18",
     "next": "13.4.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4"
   },
   "devDependencies": {
     "@types/node": "20.3.3",
